Change Collapsible container styles Fix gaps in Minipages and settings Add size prop to textbox

--- a/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
+++ b/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
@@ -15,6 +15,10 @@
     :disabled {
         cursor: not-allowed;
     }
+
+    &.max {
+        width: 100%;
+    }
 }
 
 .inputWrapper {
@@ -25,6 +29,7 @@
 
 .input {
     font-size: $font-m;
+    width: 100%;
 }
 
 .buttonsContainer {
