--- a/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
+++ b/client/src/components/utilities/MiniPagesContainer/MiniPageContainer.module.scss
@@ -27,8 +27,8 @@
   position: fixed;
   background-color: var(--surface-color);
   z-index: 2;
-  padding: 10px 20px;
   flex-wrap: nowrap;
+  gap: 0;
 }
 
 .topLineContainer {
