--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -113,9 +113,13 @@ body {
     &.Has-Shadow {
         box-shadow: $elevation-1;
     }
+}
 
-    &.Symmetrical {
-        padding: $symmetrical-padding;
+.Symmetrical {
+    padding: $symmetrical-padding;
+
+    &.Big-Padding {
+        padding: 20px 20px;
     }
 }
 
